--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap");
 @import "tailwindcss";
 
 :root {
@@ -6,21 +7,115 @@
 }
 
 @theme inline {
+  /* COLORS */
   --color-background: var(--background);
   --color-foreground: var(--foreground);
+  --color-primary: #d87d4a; /* RGB 216,125,74 — HSL 22°,65%,57% */
+  --color-secondary: #fbaf85; /* RGB 251,175,133 */
+  --color-black: #101010; /* RGB 16,16,16 */
+  --color-white: #ffffff; /* RGB 255,255,255 */
+  --color-true-black: #000000; /* RGB 0,0,0 */
+  --color-surface: #f1f1f1; /* RGB 241,241,241 */
+  --color-bg: #fafafa; /* RGB 250,250,250 */
+  --color-accent: #cfcfcf;
+  --color-red: #CD2C2C;
+
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+
+  /* Font Family */
+  --font-family: "Manrope", sans-serif;
+
+  /* H1 */
+  --text-h1: 3.5rem; /* 56px */
+  --text-h1--line-height: 3.625rem; /* 58px */
+  --text-h1--letter-spacing: 0.125rem; /* 2px */
+  --text-h1--font-weight: 700;
+  --text-h1--transform: uppercase;
+
+  /* H2 */
+  --text-h2: 2.5rem; /* 40px */
+  --text-h2--line-height: 2.75rem; /* 44px */
+  --text-h2--letter-spacing: 0.094rem; /* 1.5px */
+  --text-h2--font-weight: 700;
+  --text-h2--transform: uppercase;
+
+  /* H3 */
+  --text-h3: 2rem; /* 32px */
+  --text-h3--line-height: 2.25rem; /* 36px */
+  --text-h3--letter-spacing: 0.072rem; /* 1.15px */
+  --text-h3--font-weight: 700;
+  --text-h3--transform: uppercase;
+
+  /* H4 */
+  --text-h4: 1.75rem; /* 28px */
+  --text-h4--line-height: 2.375rem; /* 38px */
+  --text-h4--letter-spacing: 0.125rem; /* 2px */
+  --text-h4--font-weight: 700;
+  --text-h4--transform: uppercase;
+
+  /* H5 */
+  --text-h5: 1.5rem; /* 24px */
+  --text-h5--line-height: 2.063rem; /* 33px */
+  --text-h5--letter-spacing: 0.106rem; /* 1.7px */
+  --text-h5--font-weight: 700;
+  --text-h5--transform: uppercase;
+
+  /* H6 */
+  --text-h6: 1.125rem; /* 18px */
+  --text-h6--line-height: 1.5rem; /* 24px */
+  --text-h6--letter-spacing: 0.081rem; /* 1.3px */
+  --text-h6--font-weight: 700;
+  --text-h6--transform: uppercase;
+
+  /* Overline */
+  --text-overline: 0.875rem; /* 14px */
+  --text-overline--line-height: 1.188rem; /* 19px */
+  --text-overline--letter-spacing: 0.625rem; /* 10px */
+  --text-overline--font-weight: 400;
+  --text-overline--transform: uppercase;
+
+  /* Subtitle */
+  --text-subtitle: 0.813rem; /* 13px */
+  --text-subtitle--line-height: 1.563rem; /* 25px */
+  --text-subtitle--letter-spacing: 0.063rem; /* 1px */
+  --text-subtitle--font-weight: 700;
+  --text-subtitle--transform: uppercase;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-}
+} */
 
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+}
+
+h1 {
+  @apply text-h1;
+}
+h2 {
+  @apply text-h2;
+}
+h3 {
+  @apply text-h3;
+}
+h4 {
+  @apply text-h4;
+}
+h5 {
+  @apply text-h5;
+}
+h6 {
+  @apply text-h6;
+}
+.overline {
+  @apply text-overline;
+}
+.subtitle {
+  @apply text-subtitle;
 }
