--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap");
 @import "tailwindcss";
 
 :root {
@@ -20,11 +19,9 @@
   --color-accent: #cfcfcf;
   --color-red: #CD2C2C;
 
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
 
   /* Font Family */
-  --font-family: "Manrope", sans-serif;
+  /* --font-manrope: var(--font-manrope); */
 
   /* H1 */
   --text-h1: 3.5rem; /* 56px */
@@ -83,12 +80,11 @@
   --text-subtitle--transform: uppercase;
 }
 
-/* @media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+@layer components {
+  .container {
+    @apply mx-auto max-w-6xl xl:max-w-7xl px-6;
   }
-} */
+}
 
 body {
   background: var(--background);
