--- a/app/globals.css
+++ b/app/globals.css
@@ -18,10 +18,8 @@
   --color-bg: #fafafa; /* RGB 250,250,250 */
   --color-accent: #cfcfcf;
   --color-red: #CD2C2C;
+  --color-gray: #979797;
 
-
-  /* Font Family */
-  /* --font-manrope: var(--font-manrope); */
 
   /* H1 */
   --text-h1: 3.5rem; /* 56px */
@@ -82,7 +80,7 @@
 
 @layer components {
   .container {
-    @apply mx-auto max-w-6xl xl:max-w-7xl px-6;
+    @apply mx-auto w-full max-w-6xl px-6;
   }
 }
 
