--- a/app/globals.css
+++ b/app/globals.css
@@ -80,7 +80,7 @@
 
 @layer components {
   .container {
-    @apply mx-auto w-full max-w-6xl px-6;
+    @apply mx-auto w-full max-w-6xl px-6 lg:px-12;
   }
 }
 
